AP-52: Bootstrap mit Dämmerungen je Nacht, targets mit Auslieferung der nächsten drei Nächte
