# docs/api/openapi.nina.json
@@ -1515,6 +1515,79 @@
                   "type": "string",
                   "format": "date-time",
                   "example": "2026-09-18T13:00:00Z"
+                },
+                "twilight": {
+                  "type": "object",
+                  "properties": {
+                    "civil": {
+                      "type": "object",
+                      "properties": {
+                        "duskUtc": {
+                          "type": "string",
+                          "nullable": true,
+                          "format": "date-time",
+                          "example": "2026-09-18T13:00:00Z"
+                        },
+                        "dawnUtc": {
+                          "type": "string",
+                          "nullable": true,
+                          "format": "date-time",
+                          "example": "2026-09-18T13:00:00Z"
+                        }
+                      },
+                      "required": [
+                        "duskUtc",
+                        "dawnUtc"
+                      ]
+                    },
+                    "nautical": {
+                      "type": "object",
+                      "properties": {
+                        "duskUtc": {
+                          "type": "string",
+                          "nullable": true,
+                          "format": "date-time",
+                          "example": "2026-09-18T13:00:00Z"
+                        },
+                        "dawnUtc": {
+                          "type": "string",
+                          "nullable": true,
+                          "format": "date-time",
+                          "example": "2026-09-18T13:00:00Z"
+                        }
+                      },
+                      "required": [
+                        "duskUtc",
+                        "dawnUtc"
+                      ]
+                    },
+                    "astronomical": {
+                      "type": "object",
+                      "properties": {
+                        "duskUtc": {
+                          "type": "string",
+                          "nullable": true,
+                          "format": "date-time",
+                          "example": "2026-09-18T13:00:00Z"
+                        },
+                        "dawnUtc": {
+                          "type": "string",
+                          "nullable": true,
+                          "format": "date-time",
+                          "example": "2026-09-18T13:00:00Z"
+                        }
+                      },
+                      "required": [
+                        "duskUtc",
+                        "dawnUtc"
+                      ]
+                    }
+                  },
+                  "required": [
+                    "civil",
+                    "nautical",
+                    "astronomical"
+                  ]
                 }
               },
               "required": [
@@ -5228,6 +5301,28 @@
           },
           "mosaicPanelsIndependent": {
             "type": "boolean"
+          },
+          "deliveryNights": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "night": {
+                  "type": "string",
+                  "format": "date",
+                  "example": "2026-09-18"
+                },
+                "projects": {
+                  "type": "integer",
+                  "minimum": 0
+                }
+              },
+              "required": [
+                "night",
+                "projects"
+              ]
+            },
+            "maxItems": 3
           }
         },
         "required": [
